--- a/localisation/TD_regions_l_english.yml
+++ b/localisation/TD_regions_l_english.yml
@@ -122,7 +122,7 @@
  daslevenia_region: "Daslevenia"
  vorrasia_region: "Vorracia"
  amhebia_region: "Amhebia"
- sahila_region_5: "Sahila Region 5"
+ ubutya_region: "Ubutya"
  lunseka_region: "Lunseka"
  upper_ngamba_region: "Upper Ngamba"
  inyaja_region: "Inyaja"
