--- a/localisation/TD_religion_l_english.yml
+++ b/localisation/TD_religion_l_english.yml
@@ -215,7 +215,7 @@
 
 
 
- hestani: "Hestani"
+ hestani: "Maqitan"
 
  nahitar: "Nahitar"
  nahitar_religion_desc: "This faith represents the belief which originated from yermic migrants in Hestan. It is believed that all spirits and gods are divided into the higher gods, which hold power over the spiritual and material plane, and the lesser gods which can influence the human world. The core of this religion consists of monolatristic cult of higher river and mountain gods who are sometimes depicted as animals or even humans, of which most important of those are Fadi and Rasus, representing the great rivers of Hestan.\nAs of 1444 the religions is slowly being replaced by the newer Eopedian and Kausali faiths. True Nahiat believers wait for a miracle to finally unify the faith under singular doctrine."
