--- a/localisation/TD_trade_companies_l_english.yml
+++ b/localisation/TD_trade_companies_l_english.yml
@@ -290,3 +290,21 @@
  sunbat_company: "Sunbat Charter"
  TRADE_COMPANY_SUNBAT_Root_Culture_GetName: "[Root.Culture.GetName] Qawartia Company"
  TRADE_COMPANY_SUNBAT_Trade_Company: "Qawartian Trade Company"
+ vangalo_company: "Vangalo Charter"
+ TRADE_COMPANY_VANGALO_Root_Culture_GetName: "[Root.Culture.GetName] Lunseka Company"
+ TRADE_COMPANY_VANGALO_Trade_Company: "Lunsekan Trade Company"
+ amhebian_company: "South Sahilan Charter"
+ TRADE_COMPANY_AMHEBIAN_Root_Culture_GetName: "[Root.Culture.GetName] South Sahila Company"
+ TRADE_COMPANY_AMHEBIAN_Trade_Company: "Amhebian Trade Company"
+ maduni_company: "Maduni Charter"
+ TRADE_COMPANY_MADUNI_Root_Culture_GetName: "[Root.Culture.GetName] Chinkati Company"
+ TRADE_COMPANY_MADUNI_Trade_Company: "Chinkatian Trade Company"
+ cokar_company: "Cokar Charter"
+ TRADE_COMPANY_COKAR_Root_Culture_GetName: "[Root.Culture.GetName] Cokariland Company"
+ TRADE_COMPANY_COKAR_Trade_Company: "Cokar Trade Company"
+ sumbaka_company: "Sumbaka Charter"
+ TRADE_COMPANY_SUMBAKA_Root_Culture_GetName: "[Root.Culture.GetName] Ngamba Company"
+ TRADE_COMPANY_SUMBAKA_Trade_Company: "Ngamban Trade Company"
+ inyaji_company: "Inyaji Charter"
+ TRADE_COMPANY_INYAJI_Root_Culture_GetName: "[Root.Culture.GetName] Inyaja Company"
+ TRADE_COMPANY_INYAJI_Trade_Company: "Inyajan Trade Company"
