--- a/localisation/TD_tradenodes_l_english.yml
+++ b/localisation/TD_tradenodes_l_english.yml
@@ -121,7 +121,12 @@
  tubaria_tradenode: "Tubaria"
  abetosia_tradenode: "Abetosia"
  joologon_tradenode: "Joologon"
- maduni_tradenode: "Maduni"
+ maduni_tradenode: "Chinkati"
  mafid_tradenode: "Mafid"
  zakarturia_tradenode: "Mshivar"
  eamenos_tradenode: "Virinos"
+ cakrawalunia_tradenode: "Pitupit"
+ south_sahila_tradenode: "Amhebia"
+ ngamba_tradenode: "Ngamba"
+ west_sahila_tradenode: "Nsila"
+ inyaja_tradenode: "Great Lakes"
