--- a/localisation/TD_01_flavour_samadia_l_english.yml
+++ b/localisation/TD_01_flavour_samadia_l_english.yml
@@ -94,7 +94,7 @@
  apastra_dry_irigation_methods: "Dry Irigation Methods"
  apastra_dry_irigation_methods_desc: "Due to high dryness of the land in our homeland of Apastradesa, we had to improve and advance our irigation methods to be able to survive in this harsh environment."
  apastra_rajaraksaka: "Rajaraksaka"
- apastra_rajaraksaka_desc: "Rajaraksaka (Royal Guard in English) is an elite force in every Apastras-respecting country, Recruited from free Apastras, utilized mainly to protect fortifications, and can be semi-rarely seen in common Apastri armies."
+ apastra_rajaraksaka_desc: "Rajaraksaka, meaning Royal Guard, is an elite force in every Apastras-respecting country, Recruited from free Apastras, utilized mainly to protect fortifications, and can be semi-rarely seen in common Apastri armies."
  apastra_bhajsaya_teachings: "Bhajsaya Teachings"
  apastra_bhajsaya_teachings_desc: "Bhajsaya way of life teaches us that gods favour the wise and may give them various gifts, so we should improve our universities and teach the basic knowledge."
  apastra_trade_across_the_mountains: "Trade Across the Nadivi Mountains"
