--- a/localisation/TD_01_flavour_samadia_l_english.yml
+++ b/localisation/TD_01_flavour_samadia_l_english.yml
@@ -28,7 +28,7 @@
  viravanati_repel_the_northerners: "Repel the Northerners"
  viravanati_repel_the_northerners_desc: "Despite Northern kingdoms being a threath to the goodness and well-being are true or not, one thing is undeniable: They are a threat to existence of our very way of life. We need to mobilize the masses to fight back!"
  viravanati_ban_faith_in_gods: "Ban the faith in Gods"
- viravanati_ban_faith_in_gods_desc: "Despite the fact that many of our citizens agree with our priests, that all gods are evil, there are some that still belive in some kind of gods. We need to eradicate all traces of faith in any gods, and there is no better way to do it than oficially ban it."
+ viravanati_ban_faith_in_gods_desc: "Despite the fact that many of our citizens agree with our priests, that all gods are evil, there are some that still belive in some kind of gods. We need to eradicate all traces of faith in any gods, and there is no better way to do it than officially ban it."
  viravanati_maritime_tradition: "Maritime Tradition"
  viravanati_maritime_tradition_desc: "Despite many differences between various Viravanati countries, we share the same roots. Roots that are focused on sailing, trading and exploring. We never cannot forget our culture lies as much on water, as it lies on land."
  viravanati_unique_architecture: "Viravanati Architecture"
@@ -105,7 +105,7 @@
  apastra_land_of_dyes_and_silk_desc: "Apastradesa is known in the west as `Land of Dyes and Silk`, and we can utilize this for the sake of our renown and glory, and to appease the Apastras that manufacture all these goods."
  apastra_engineering_mastery: "Apastras Engineering Mastery"
  apastra_engineering_mastery_desc: "Apastras have reached a mastery in defensive Engineering over the years, and their expertise is invaluable to our state, it's prosperity, and continued survival."
-  
+ 
  lilkumata_ideas: "Lilkumati Ideas"
  lilkumata_ideas_bonus: "Lilkumati Ambition"
  lilkumata_ideas_start: "Lilkumati Traditions"
