--- a/localisation/TD_01_flavour_ehrenia_l_english.yml
+++ b/localisation/TD_01_flavour_ehrenia_l_english.yml
@@ -255,3 +255,11 @@
 
  EHRENIA: "Ehrenia"
  EHRENIA_ADJ: "Ehren"
+
+ BLUE_SAELIAN: "Blue Saelian Empire"
+ BLUE_SAELIAN_ADJ: "Blue Saelian Empire"
+
+blue_saelian_empire_nation_title: "Form Blue Saelian Empire"
+blue_saelian_empire_nation_desc: "Glory"
+ 
+ 
