--- a/localisation/TD_01_flavour_samadia_l_english.yml
+++ b/localisation/TD_01_flavour_samadia_l_english.yml
@@ -142,6 +142,24 @@
  lalkumata_reclaiming_eastern_holdings: "Reclaiming Eastern Holdings"
  lalkumata_reclaiming_eastern_holdings_desc: "Old Sarviraja before it's fall was extensive political entity, with it's border reaching as far as Nadivi mountains, and Atuma and Daskivistar deserts, and due to Hedonist nature of Jayesh Derbare, most of this territory have reclaimed independence from our glorious empire. Lalkumata managed to launch a successful campaigns to the east and reclaims some part of those lands before ultimately succumbing to Vadkumata's conquest."
  
+ vadkumata_ideas: "Vadkumatian Ideas"
+ vadkumata_ideas_bonus: "Vadkumatian Ambition"
+ vadkumata_ideas_start: "Vadkumatian Traditions"
+ vadkumata_imperial_legacy: "Imperial Legacy"
+ vadkumata_imperial_legacy_desc: "Vadkumata is a heir of Sarviraja Empire, and lies on the most honorable legacy of said empire. We are the most legitimate successor of Sarviraja, and it is our sacred duty to restore it to it's former glory, depose the hedonist Jayesh, and crush Lilkumata rebellion."
+ vadkumata_lessons_of_lalkumati_wars: "Lessons Of Lalkumati Wars"
+ vadkumata_lessons_of_lalkumati_wars_desc: "Between year 1494 and 1500 we fought a 6-year war against Lalkumata, and although we suffered a devastating defeat at the battle of Agacaka, we have also taken lessons from this battle, and improved our understanding of gunpowder warfare."
+ vadkumata_pastoral_abundance: "Pastoral Abundance"
+ vadkumata_pastoral_abundance_desc: "Vadkumata lies in the old southern Sarviraja province, most well know for being pastoral lands of the empire, supplying imperial court with finest beef and milk. This land was also known for being main producer of sugar in Sarviraja Empire. We can't change what is done here, so we should improve the working conditions to increase the yield, and in turn, our income."
+ vadkumata_reunification_efforts: "Reunification Efforts"
+ vadkumata_reunification_efforts_desc: "It was always our goal and sacred duty since the times of first ruler of Vadkumata, Ajay Derbare, to restore Sarviraja Empire to it's former glory, to unite all of Sarvinis, and bring the Apastras into the fold of our glorious realm."
+ vadkumata_letters_of_shame: "Letters of Shame"
+ vadkumata_letters_of_shame_desc: "Heir of Ajay Derbare, his son Hira, was known for introducing the famous `Letters of Shame` into Vadkumatian diplomacy. The letters were very scornful in nature, and made all our enemies know that we mean serious business, when we knock on their door with our artillery and guns."
+ vadkumata_empowerment_of_nobility: "Empowerment of Nobility"
+ vadkumata_empowerment_of_nobility_desc: "During XVIth century, exactly between year 1545 and 1585, during continous conquest of southern Apastradesa and southern Lalkumata, Vadkumata saw a consolidation of power by the nobility, which in turn for remaining loyal and supportive of the crown has been granted various privileges, resulting in them being the most prestigious and privileged estate in Vadkumata, and later, in reunited Sarviraja."
+ vadkumata_academy_of_war_logistics: "Academy of War Logistics"
+ vadkumata_academy_of_war_logistics_desc: "After continious losses in northern wars and southern border wars with Saryana due to attrition, we had started learning the lesson, and founded the National Sarviraja Academy of War Logistics in Dakara in 1602 to prevent further losses due to starvation, cold and other logistical factors in our military."
+ 
  apagtaru_kingdom_reform: "Apagtaru Kingdom"
  apagtaru_kingdom_reform_desc: "Apagtaru Kingdom is most prestigious governing body in Apagtaru lands, and it commands all of the Apagtaru people in the will of Gods. It is heavily anti-burghers due to it's long history."
  
