--- a/localisation/TD_01_flavour_samadia_l_english.yml
+++ b/localisation/TD_01_flavour_samadia_l_english.yml
@@ -160,11 +160,32 @@
  vadkumata_academy_of_war_logistics: "Academy of War Logistics"
  vadkumata_academy_of_war_logistics_desc: "After continious losses in northern wars and southern border wars with Saryana due to attrition, we had started learning the lesson, and founded the National Sarviraja Academy of War Logistics in Dakara in 1602 to prevent further losses due to starvation, cold and other logistical factors in our military."
  
+ marudesa_ideas: "Marudesan Ideas"
+ marudesa_ideas_bonus: "Marudesan Ambition"
+ marudesa_ideas_start: "Marudesan Traditions"
+ marudesa_legacy_of_imperial_legion: "Legacy of Imperial Legion"
+ marudesa_legacy_of_imperial_legion_desc: "Marudesa is a state founded by the lost Imperial Sarviraji legion in the middle of the Daskivistar desert, and although the Sarviraja Empire has fallen, memory and military drills of this long-gone empire still are alive and well in our country."
+ marudesa_golden_mines_of_giidra: "Golden Mines of Giidra"
+ marudesa_golden_mines_of_giidra_desc: "Whole Marudesa is located in the middle of Daskivistar desert, that means, middle of nowhere, and the only thing keeping us from starving here to death is trade with other countries, where we exchange the gold mined in Giidra for food, cloth and other necessities. We need to do everything in our power to keep that mine operating as long as possible."
+ marudesa_cooperation_with_apastras: "Cooperation with Apastras"
+ marudesa_cooperation_with_apastras_desc: "Even though we are not Apastri natives, we have more Apastras that Nobility in Marudesa, and we not only should live in peace and coexistence with the Apastras, but we should also learn from them, and teach them thing they don't know in exchange, to further cement our bond."
+ marudesa_diplomatic_offensive: "Diplomatic Offensive"
+ marudesa_diplomatic_offensive_desc: "The Marudesan Diplomatic Offensive was a series of alliances and treaties made in 1487 between Marudesa, Saryana, Amajya, and other minor Apastri princedoms, made by newly appointed Legionnaire Diplomats, and secured the continued existence of Marudesa until XVIIth Century."
+ marudesa_desert_raids: "Desert Raids"
+ marudesa_desert_raids_desc: "With our economy rather lacking, we have learned that the best source of income and other goods is raiding our enemies in unallied Apastri countries and Tsetsagi borderlands, and have designated specialized Legionnaire raiding parties that were both effective in looting and moving around swiftly."
+ marudesa_reorganization_of_the_state: "Reorganization of the State"
+ marudesa_reorganization_of_the_state_desc: "With the Dawn of United Apastradesa, our independence has become endangered again, not only beacuse of the strenght of the newly united state, but also beacuse our legislation was outdated, and our economy lacking. We have to introduce groundbreaking reforms in our Legionnaire state, and radically reorganize it to secure it's futher survival."
+ marudesa_desert_infrastructure: "Desert Infrastructure"
+ marudesa_desert_infrastructure_desc: "With time spent in the Daskivistar desert we have learned to adapt to build in this harsh environment, rely on the very few and inbetween food and water sources, and managed to even speed up the process of building in this unfriendly environment."
+ 
  apagtaru_kingdom_reform: "Apagtaru Kingdom"
  apagtaru_kingdom_reform_desc: "Apagtaru Kingdom is most prestigious governing body in Apagtaru lands, and it commands all of the Apagtaru people in the will of Gods. It is heavily anti-burghers due to it's long history."
  
  apagtaru_march_reform: "Apagtaru March"
  apagtaru_march_reform_desc: "Apagtaru March is a subject of Apagtaru Kingdom that was established on the southern border of the Apagtaru realm."
+ 
+ lost_legion_reform: "Lost Legion"
+ lost_legion_reform_desc: "Lost Legion of Sarviraja Empire, that has been lost in the desert of Daskivistar and established it's own state there."
  
  apagtaru_aranya_march_reform: "Aranya March"
  apagtaru_aranya_march_reform_desc: "Aranya March is a special Apagtaru March established by Aranya dynasty, and it's mission is to colonize the eastern forests."
