formables and other samadian content

--- a/localisation/TD_01_flavour_samadia_l_english.yml
+++ b/localisation/TD_01_flavour_samadia_l_english.yml
@@ -186,6 +186,8 @@
  
  lost_legion_reform: "Lost Legion"
  lost_legion_reform_desc: "Lost Legion of Sarviraja Empire, that has been lost in the desert of Daskivistar and established it's own state there."
+ legacy_of_lost_legion_reform: "Legacy of Lost Legion"
+ legacy_of_lost_legion_reform_desc: "Although our state isn't just a mimicry of a country anymore, we still derive much of our military experience from our legionary past."
  
  apagtaru_aranya_march_reform: "Aranya March"
  apagtaru_aranya_march_reform_desc: "Aranya March is a special Apagtaru March established by Aranya dynasty, and it's mission is to colonize the eastern forests."
@@ -199,6 +201,16 @@
  
  pakapujarirajya_reform: "Pakapujarirajya"
  pakapujarirajya_reform_desc: "Pakapujarirajya is a government where the king is the leader of Desjaniti religion, and is considered either God, or that was sent by Gods."
+ LEGIONNAIRE_STATE: "Legionnaire State"
+ LEGIONNAIRE_KINGDOM: "Legionnaire Kingdom"
+ LEGIONNAIRE_EMPIRE: "Legionnaire Empire"
+ LEGION_MASTER: "Master Legionnaire"
+ LEGION_GRANDMASTER: "Grandmaster Legionnaire"
+ LEGION_HEIR: "Legionnaire Diikaro"
+ LEGION_HEIR_F: "Legionnaire Diikarii"
  PAKAPUJARIRAJYA: "Pakapujarirajya"
  SARVOCCAPAKAPUJARI: "Sarvoccapakapujari"
  estate_pakapujari: "Pakapujari"
+ 
+ RENARAJA: "Renaraja"
+ RENARAJA_ADJ: "Renaraji"
