--- a/localisation/TD_02_decision_nations_l_english.yml
+++ b/localisation/TD_02_decision_nations_l_english.yml
@@ -189,3 +189,12 @@
  
  daslevania_nation_title: "Unite Daslevania @DSL"
  daslevania_nation_desc: "With the collapse of the Bunelisuli Empire, there is a power vacuum in the Kakigian region. It is time we utilize this to forge our own empire!"
+ 
+ sarviraja_nation_title: "Restore Sarviraja @SRV"
+ sarviraja_nation_desc: "We have reclaimed most of the western holdings of Sarviraja, it is time we restore Sarviraja to it's former glory!"
+ 
+ apastradesa_nation_title: "Unite Apastradesa @APS"
+ apastradesa_nation_desc: "We have united most of Apastri lands, it is time we unite our glorious homeland of Apastradesa into unified state to repel outsiders!"
+ 
+ marudesa_reform_nation_title: "Reform Into Renaraja"
+ marudesa_reform_nation_desc: "We Control most of the Daskivistar desert area, and have made significant progress on reforming our country, it is time we reform into a proper state."
