--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1046,6 +1046,8 @@
  LUH_ADJ: "Luhardesan"
  VAD: "Vadkumata"
  VAD_ADJ: "Vadkumatian"
+ SRV: "Sarviraja"
+ SRV_ADJ: "Sarviraji"
 
  GHO: "Ghodara"
  GHO_ADJ: "Ghodaran"
@@ -1065,6 +1067,8 @@
  BLN_ADJ: "Bilenguri"
  EKA: "Ekakiri"
  EKA_ADJ: "Ekakirian"
+ APS: "Apastradesa"
+ APS_ADJ: "Apastri"
 
  COK: "Cokhura"
  COK_ADJ: "Cokhuran"
