--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -440,6 +440,7 @@
 
  jatihakta_group: "Jakihakta"
  apagtaru: "Apagtaru"
+ aranyana: "Aranyana"
 
  mazavasi_group: "Mazavasi"
  nadigana: "Nadigana"
