--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -5151,8 +5151,8 @@
  PROV5150: "5150"
  PROV5151: "5151"
  PROV5152: "5152"
- PROV5153: "5153"
- PROV5154: "5154"
+ PROV5153: "Dutissim"
+ PROV5154: "Dutissim"
  PROV5155: "5155"
  PROV5156: "5156"
  PROV5157: "5157"
