--- a/localisation/TD_religion_l_english.yml
+++ b/localisation/TD_religion_l_english.yml
@@ -625,5 +625,6 @@
  amanaa_rebels_desc: "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
  amanaas_rebels_army: "$RELIGION$ Army"
  amanaa_rebels_demand: "Convert $COUNTRYNAME$"
+ anamaa: "Anamaa"
  
  
