--- a/localisation/TD_01_flavour_samadia_l_english.yml
+++ b/localisation/TD_01_flavour_samadia_l_english.yml
@@ -178,6 +178,24 @@
  marudesa_desert_infrastructure: "Desert Infrastructure"
  marudesa_desert_infrastructure_desc: "With time spent in the Daskivistar desert we have learned to adapt to build in this harsh environment, rely on the very few and inbetween food and water sources, and managed to even speed up the process of building in this unfriendly environment."
  
+ saryana_ideas: "Saryanian Ideas"
+ saryana_ideas_bonus: "Saryanian Ambition"
+ saryana_ideas_start: "Saryanian Traditions"
+ saryana_advanced_feudalism: "Advanced Feudalism"
+ saryana_advanced_feudalism_desc: "Saryanian land have been known for centuries as fragmented due to early adoption of feudalism in Apagtaru lands, and saw unification only in modern history with the eclipse of feudalism and dawn of more modern legislation, and it's roots can still be seen with the amount of subjects Saryana tended to have until XVIIth century."
+ saryana_katakabharti: "Katakabharti"
+ saryana_katakabharti_desc: "Katakabharti is a unique to Saryana recruitment system adopted in year 1396, where every peasant villager that was of age, that means, between 15 and 40 years old, had to fulfill atleast ten years of mandatory military service in Saryanian Royal Army."
+ saryana_agrasara_gun_designs: "Agrasara Gun Designs"
+ saryana_agrasara_gun_designs_desc: "Southward conquest of Saryana and it's subject increased the pace at which technological breakthroughts were made in military science, resulting in the creation and adoption of Standard Agrasara Gun Designs in the Saryanian Royal Army, which were more accurate and had higher fire rate than it's precedessors."
+ saryana_southern_ambitions: "Southern Ambitions"
+ saryana_southern_ambitions_desc: "With ascension of Pallab II to the throne we saw increased militarization of our country, and birth of first Imperial Saryanian Ambitions towards southern and eastern lands, which with time has become almost destiny-like ambitions of future rulers of Saryana."
+ saryana_northern_granary: "Northern Granary"
+ saryana_northern_granary_desc: "Saryana is greatest producer and exporter of grain and spices in northern Maisetra, so we should supports those farmers and producers to increase the yield, and in turn, profit, even further, and secure internal food stability of our future Empire."
+ saryana_cultural_festivals: "Cultural Festivals"
+ saryana_cultural_festivals_desc: "Apagtaru Culture is renowned for it's cultural festivals that are held around various occassions, like holidays, either religious or national, one of the most well-known are birthdays of Saryanian Rulers, and many travellers, even from abroad, travel into Saryana to be able to partake in those special festivals."
+ saryana_imperial_law_codex: "Imperial Law Codex"
+ saryana_imperial_law_codex_desc: "Imperial Ambitions of Saryana and Southward expansion saw the need to reorganize the law codex, update and simplify the legislation, and ensure every subject of our future glorious empire can live in a just, fair, and law-respecting state. In that spirit Saryanian ruler Pallab VI in 1567 created the first Imperial Law Codex."
+ 
  apagtaru_kingdom_reform: "Apagtaru Kingdom"
  apagtaru_kingdom_reform_desc: "Apagtaru Kingdom is most prestigious governing body in Apagtaru lands, and it commands all of the Apagtaru people in the will of Gods. It is heavily anti-burghers due to it's long history."
  
