--- a/localisation/TD_01_flavour_sahila_l_english.yml
+++ b/localisation/TD_01_flavour_sahila_l_english.yml
@@ -1,3 +1,7 @@
 ﻿l_english:
  inyajan_seniority_reform: "Inyajan Seniority"
  inyajan_seniority_reform_desc: "Inyajan states are governed by a council of elders."
+
+ urban_monarchy_reform: "Urbanized Tribe"
+ urban_monarchy_reform_desc: "A system where the power in the country concentrated in the heavily fortified capital."
+ mechanic_capital_bonus_dev_yes: "Chance for additional point of development when increasing development in the capital province."
