--- a/localisation/TD_01_flavour_samadia_l_english.yml
+++ b/localisation/TD_01_flavour_samadia_l_english.yml
@@ -106,6 +106,24 @@
  apastra_engineering_mastery: "Apastras Engineering Mastery"
  apastra_engineering_mastery_desc: "Apastras have reached a mastery in defensive Engineering over the years, and their expertise is invaluable to our state, it's prosperity, and continued survival."
  
+ jatihakta_group_ideas: "Jatihakta Minor Ideas"
+ jatihakta_group_bonus: "Jatihakta Minor Ambition"
+ jatihakta_group_start: "Jatihakta Minor Traditions"
+ jatihakta_frontier_of_conquest: "Frontier of Conquest"
+ jatihakta_frontier_of_conquest_desc: "Jatihakta people are on constant frontier of warfare and conquest beacuse we are surrounded by states that want to conquer us, so we need to fight back, and conquer them instead.\nForward, to Victory!"
+ jatihakta_mercenary_reliance: "Mercenary Reliance"
+ jatihakta_mercenary_reliance_desc: "Due to most of the land being under direct or indirect management of Saryanian Kingdom, we are left with not enough subjects to enlist into our armies, so we turn to the mercenaries, and rely on the fact that the increased number of them flows into our country."
+ jatihakta_united_in_faith: "United in Faith"
+ jatihakta_united_in_faith_desc: "Despite our southward and eastward expansions, we are united with our brethren in Desjaniti faith, and respect the teachings of Pakapujari, and so we would never hurt our fellow brethren in faith."
+ jatihakta_cultural_festivals: "Cultural Festivals"
+ jatihakta_cultural_festivals_desc: "Although not as colorful as Saryanian Cultural Festivals, we also hold many cultural festivals on national and religious holidays, which are exclusive to whole Jatihakta cultural group."
+ jatihakta_new_golden_age: "New Golden Age"
+ jatihakta_new_golden_age_desc: "After years of bad military-focused management of Pallab II and Karuna I, we have finally saw some increase in autonomy and better rulings from Pallab IV in 1521, which allowed us to flourish into a Jatihakta golden age, where nobody died of starvation."
+ jatihakta_elephant_cavalry: "Elephant Cavalry"
+ jatihakta_elephant_cavalry_desc: "Jatihakta are known for being one of not many people to ride elephants, especially war elephants, which are far more effective than standard horse cavalry in jungle environment."
+ jatihakta_curbing_the_evil_within: "Curbing the Evil Within"
+ jatihakta_curbing_the_evil_within_desc: "Although not every state's Pakapujari agrees on that, we see the merchants as evil, and either enforce their loyalty, or banish them from our realms, and we should bring this view through all of the known world!"
+ 
  lilkumata_ideas: "Lilkumati Ideas"
  lilkumata_ideas_bonus: "Lilkumati Ambition"
  lilkumata_ideas_start: "Lilkumati Traditions"
