--- a/localisation/TD_01_flavour_samadia_l_english.yml
+++ b/localisation/TD_01_flavour_samadia_l_english.yml
@@ -107,8 +107,8 @@
  apastra_engineering_mastery_desc: "Apastras have reached a mastery in defensive Engineering over the years, and their expertise is invaluable to our state, it's prosperity, and continued survival."
  
  jatihakta_group_ideas: "Jatihakta Minor Ideas"
- jatihakta_group_bonus: "Jatihakta Minor Ambition"
- jatihakta_group_start: "Jatihakta Minor Traditions"
+ jatihakta_group_ideas_bonus: "Jatihakta Minor Ambition"
+ jatihakta_group_ideas_start: "Jatihakta Minor Traditions"
  jatihakta_frontier_of_conquest: "Frontier of Conquest"
  jatihakta_frontier_of_conquest_desc: "Jatihakta people are on constant frontier of warfare and conquest beacuse we are surrounded by states that want to conquer us, so we need to fight back, and conquer them instead.\nForward, to Victory!"
  jatihakta_mercenary_reliance: "Mercenary Reliance"
