--- a/localisation/TD_01_flavour_voitak_l_english.yml
+++ b/localisation/TD_01_flavour_voitak_l_english.yml
@@ -39,3 +39,21 @@
  khen_nu_chua_reform_desc: ""
  bien_giura_matriarchate_reform: "Bien Giura Matriarchate"
  bien_giura_matriarchate_reform_desc: ""
+
+ ta_trai_group_ideas: "Ta-Trâi Minor Ideas"
+ ta_trai_group_ideas_bonus: "Ta-Trâi Minor Ambition"
+ ta_trai_group_ideas_start: "Ta-Trâi Minor Traditions"
+ voitak_lienh_tienh: "Lienh Tienh"
+ voitak_lienh_tienh_desc: "What makes one a proper ruler in Voitak is not their status or birthright, but their ability to channel the divine. Stemming from an ancient folk tradition, it is said that higher spirits can occupy the body of a person in order to influence them and the physical world."
+ voitak_voitak_pepper: "Voitak Pepper"
+ voitak_voitak_pepper_desc: "While there are plethoral of goods and spices originating in Voitak, the most famed is probably the pepper, popular among both peasantry and the elites. Its valor is even seen abroad and bought in great quantities by merchants from all continents."
+ voitak_one_true_faith: "One True Faith"
+ voitak_one_true_faith_desc: "These lands are split between two major denominations of Zhengist faiths: Xianga, closely resembling the folk religion of Hengtua, and Cach Moi, Xianga's more localized variant. With hostility between the faiths, it is obvious that our truly righteous religion will be victorious."
+ voitak_warlords_of_the_jungle: "Warlords of the Jungle"
+ voitak_warlords_of_the_jungle_desc: "Fighting for power in engrained in Ta trai culture - as quickly as a pious ruler can rise to power, so can a sinner can fall to rebels and other claimants."
+ voitak_elephant_lords: "Elephant Lords"
+ voitak_elephant_lords_desc: "Thanks to the large population of wild elephants, it is very easy to catch the youngs and then train them to be used in battle. This has been a very common practice among many local lords, so much so that elephants themselves became a very important cultural pillar."
+ voitak_forest_fields: "Forest Fields"
+ voitak_forest_fields_desc: "First farmers of Voitak quickly discovered, that farmlands surrounded by forests don't dry out as fast as those in the open field. This allowed local settlements to rapidly expand, outpacing the less fortunate villages."
+ voitak_lions_of_ho_tlo: "La Quen Lions"
+ voitak_lions_of_ho_tlo_desc: "Soldiers from highlands of La Quen are trained in harsh conditions for years, being able to not only withstand the wilderness, but also the enemy attacks. They are often employed by many lords as elite troops or guards."
