Teotloqitl ideas + fixes

--- a/localisation/TD_01_flavour_wasichantlia_l_english.yml
+++ b/localisation/TD_01_flavour_wasichantlia_l_english.yml
@@ -123,3 +123,21 @@
  uey_atlaqotlatl_fleet_desc: "Another important aspect of keeping a strong empire in these modern times is the ability to maintain a naval presence around your nation. Thankfully, our coasts mostly lie in the Atlaqotlatl Bay, so keeping control of the region is relatively easy. Small and professional with the ability to quickly repair and replenish men in a nearby fort was established and proved to be a success in some of the later conflicts."
  uey_rapid_modernization: "Rapid Modernization"
  uey_rapid_modernization_desc: "The first contact with the easterners shook our entire civilization. Their second coming was just an unexpected as the first one, however many of us adapted quicker to the new state of the world around them. What was dangerous at first, quickly was adopted by our people and innovations of Mysentria found their place in our cities and villages. We are no longer considered a backwater and many now fear our might."
+
+ teotloqitl_group_ideas: "Teotloqitl Minor Ideas"
+ teotloqitl_group_ideas_bonus: "Teotloqitl Minor Ambition"
+ teotloqitl_group_ideas_start: "Teotloqitl Minor Traditions"
+ teotloqitl_city_dwelling: "City Dwelling"
+ teotloqitl_city_dwelling_desc: "Semi-frequent wars between various states in the time before the unified empire have forced more prosperous settlements to fortify, and those that weren't able to do it fast enough - to perish. Even as times became more peaceful, the tradition remained."
+ teotloqitl_obsidian_blades: "Obsidian Blades"
+ teotloqitl_obsidian_blades_desc: "The 'cosmic rock' has been widely used by anyone willing to dominate over their neighbours. Incredibely sharp, it can cut through most armors with ease and doesn't need additional refining."
+ teotloqitl_zoltecian_road_network: "Zoltecian Road Network"
+ teotloqitl_zoltecian_road_network_desc: "Tonatitlazoltec empire was the biggest empire in the region before Tonatitlan, mostly thanks to its effective administration and an extensive network of roads, connecting every city to the capital."
+ teotloqitl_ties_of_loyalty: "Ties of Loyalty"
+ teotloqitl_ties_of_loyalty_desc: "What makes a good subject? It's not the dedication or correct insight, but sheer, undisputed loyalty. This is what founded the great empires of the past and it will let us become one ourselves."
+ teotloqitl_atayala_waterways: "Atayala Waterways"
+ teotloqitl_atayala_waterways_desc: "River Atayala is very wild for most of its course, making it difficult for settlements to permanently settle and benefit from its waters. Thanks to the efforts of our engineers, canals were constructed, allowing us to safely water the crops."
+ teotloqitl_poems_for_the_fallen: "Poems for the Fallen"
+ teotloqitl_poems_for_the_fallen_desc: "To motivate men to die for their ruler, they were given many rewards, but in the end none was as impactful as glory. Every one of our soldiers know, that if they were to perish their name will be praised for ages."
+ teotloqitl_reclaiming_our_legacy: "Reclaiming our Legacy"
+ teotloqitl_reclaiming_our_legacy_desc: "What was once a great empire is now an imitation of its former self, with provinces barely loyal, cities decaying and bandits rampaging the countryside. We must bring back the past glory."
