--- a/localisation/TD_prov_modifiers_l_english.yml
+++ b/localisation/TD_prov_modifiers_l_english.yml
@@ -50,6 +50,7 @@
  pigara_estuary_modifier: "Pigara Estuary"
  dammamate_estuary_modifier: "Dammamate Estuary"
  ngamba_estuary_modifier: "Ngamba Estuary"
+ atayala_estuary_modifier: "Atayala Estuary"
  
 
  uzkolian_toll: "Uzkolian Toll"
