--- a/localisation/TD_01_flavour_muzbah_l_english.yml
+++ b/localisation/TD_01_flavour_muzbah_l_english.yml
@@ -26,3 +26,6 @@
  muzbah_maqitan_crossroad_desc: "The Maqitan Sea is where many different inland roads blend together into an intricate web of trade routes and political intrigues. The lands of Ilum sit right where the western, yermic and visparayan groups interconnect. We can purchase Frankrani incense cheap and sell it for a fortune to Eneratians, or sell Gisian and Camarian grain to Lamedinians."
  muzbah_saviors_of_mesutia: "Saviors of Mesutia"
  muzbah_saviors_of_mesutia_desc: "The time of salvation has finally come. Eastern Sahila has been ruled by corrupted religious leaders, encouraging pagan polytheistic worship of devils. Their tyranny will soon end by the brave army of Ilum, marching as far south as it is needed.Their golden bulls and monuments will be melted into coins, to fund further campaigns against any heathens that oppose us."
+
+ pirate_kingdom_reform: "Pirate Kingdom"
+ pirate_kingdom_reform_desc: "A pirate kingdom is a system where the king often participates in coastal raids against other states."
