--- a/localisation/TD_01_Flavour_Hengtua_l_english.yml
+++ b/localisation/TD_01_Flavour_Hengtua_l_english.yml
@@ -470,3 +470,21 @@
 
  estate_burghers_daa_closed_guild: "Closed Guild"
  estate_burghers_daa_closed_guild_desc: "Pressure from the powerful merchants forced the royal court to pass a decree allowing only select individuals to trade overseas. Additionaly, all new members of the merchants' guild must be either a part of the nobility or one of the powerful merchant families, keeping wealth within the elite."
+
+ prakaani_group_ideas: "Prakaani Minor Ideas"
+ prakaani_group_ideas_bonus: "Prakaani Minor Ambition"
+ prakaani_group_ideas_start: "Prakaani Minor Traditions"
+ prakaani_dasenli_colonization: "Dasenli Colonization"
+ prakaani_dasenli_colonization_desc: "The prosperity hidden in Dasenli was never truly exploited by people's that lived there, who never realized the amount of wealth they are sitting on. Access to those resources is crucial to the success of our state."
+ prakaani_pak_keo_ceramic: "Pak Keo Ceramic"
+ prakaani_pak_keo_ceramic_desc: "Durable and lightweight, ceramic of Dinh-Tong, often simply called Pak Keo ceramic, is not only stylistically pleasing, but also easily transported."
+ prakaani_war_dragons: "War Dragons"
+ prakaani_war_dragons_desc: "War dragon is a type of cannon predominately used to bombard targets from a safe distance and providing support to the frontline units. It was mostly used in wars between the great Prakaani kingdoms."
+ prakaani_hengtuan_model: "Hengtuan Army Model"
+ prakaani_hengtuan_model_desc: "Using the Tsutan and Henlen armies as an inspiration, many states began to embrace semi-professional militaries, instead of mostly relying on peasant levies. In Dinh-Tong this led to the warrior estate greatly increasing in size, providing support in war efforts."
+ prakaani_river_trading: "River Trading"
+ prakaani_river_trading_desc: "Two great rivers of Dinh-Tong - Dawba and Maenadeng - both flow into the Prakaani Bay, where most trading takes place before goods are shipped off to Cakrawalunia and Tsinhoi. The rivers are the easiest way to tranfer said goods and avoid unguarded forests."
+ prakaani_folk_syncretism: "Folk Syncretism"
+ prakaani_folk_syncretism_desc: "Even though it is said most Prakaanis follow Xifang doctrines, many of them largely adapt them into their own worldview, mixing it with local customs and beliefs. Even regions that are predominately Xianga don't precisely follow the teachings, leaving a lot of room for interpretation."
+ prakaani_prakaani_absolutism: "Prakaani Absolutism"
+ prakaani_prakaani_absolutism_desc: "By the ancient laws, all land in the realm belongs solely to the king. At any point it can be freely seized or given away, though of course not without a pushback."
