--- a/localisation/TD_colonial_regions_l_english.yml
+++ b/localisation/TD_colonial_regions_l_english.yml
@@ -147,8 +147,8 @@
  COLONIAL_Root_Culture_GetName_blawenn_ADJ: "[Root.GetAdjective] Blawennian"
 
  colonial_ashmorland: "Colonial Ashmorland"
- COLONIAL_sealatir: "Sealatir"
- COLONIAL_sealatir_ADJ: "Sealatirian"
+ COLONIAL_sealatir: "Sealatìr"
+ COLONIAL_sealatir_ADJ: "Sealatìrian"
  COLONIAL_ashmordland_custom: "Ashmorland"
  COLONIAL_ashmordland_custom_ADJ: "Ashmorlish"
  COLONIAL_new_abendohn: "New Abendohn"
