--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -1098,3 +1098,13 @@
  betheland_area: "Betheland"
  tessberaid_area: "Tessberaid"
  caleria_area: "Caleria"
+
+ mitsineti_area: "Mitsineti"
+ mitsakodos_area: "Mitsakodos"
+ chabotia_area: "Chabotia"
+ amania_area: "Amania"
+ north_ulaanmad_area: "North Ulaanmad"
+ south_ulaanmad_area: "South Ulaanmad"
+ bagoer_area: "Bagoer"
+ futai_area: "Futai"
+ tenfun_area: "Tenfun"
