--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -947,7 +947,7 @@
  PROV946: "Toranna"
  PROV947: "Alaienne"
  PROV948: "Rinerate"
- PROV949: "949"
+ PROV949: "Tubarian Desert"
  PROV950: "Laziani"
  PROV951: "Fomiosa"
  PROV952: "Itsedyes"
@@ -1239,7 +1239,7 @@
  PROV1238: "Abunae"
  PROV1239: "Hyrcedos"
  PROV1240: "Pellos"
- PROV1241: "1241"
+ PROV1241: "Tubarian Desert"
  PROV1242: "Momaaki Sea"
  PROV1243: "Cleideos"
  PROV1244: "Synoa"
@@ -4898,9 +4898,9 @@
  PROV4897: "Taailuuk"
  PROV4898: "Taaishu"
  PROV4899: "4899"
- PROV4900: "4900"
+ PROV4900: "Hlaba"
  PROV4901: "4901"
- PROV4902: "4902"
+ PROV4902: "Nkhiba"
  PROV4903: "4903"
  PROV4904: "4904"
  PROV4905: "4905"
