--- a/localisation/TD_01_flavour_samadia_l_english.yml
+++ b/localisation/TD_01_flavour_samadia_l_english.yml
@@ -16,7 +16,7 @@
  estate_maratha_development_of_castles_rt: "The modifier '§YExpand the Fortifications§!' is removed from all provinces with a §YFort§!.\nThe modifier '§YExpand the Ramparts§!' is removed from all provinces with §YRamparts§!."
  estate_maratha_development_of_castles_mod: "Expand the Fortifications"
  
- estate_church_peace_perfectionism: "Peace Perfectonism"
+ estate_church_peace_perfectionism: "Pacifist Perfectionism"
  estate_church_peace_perfectionism_desc: "Ayuhuro focuses on peace and tranquility as it's core religious and moral values, but peaceful doesn't mean defenseless, as we can stand our ground if someone decides to invade us."
  
  viravanati_group_ideas: "Viravanati Minor Ideas"
