diarena gov name

--- a/localisation/TD_01_flavour_diarena_l_english.yml
+++ b/localisation/TD_01_flavour_diarena_l_english.yml
@@ -16,3 +16,10 @@
  diarena_lords_of_incense_desc: "Out of many exports of Diarena such as wool, clothing, and ivory, the most profitable are the many incense - mostly myrrh or frankincense. They are extracted further inland and brought to the coast to be sold as a luxury or a religious item."
  diarena_diarenan_banking: "Diarenan Banking"
  diarena_diarenan_banking_desc: "Many quickly found out, that when everyone is risking their lives on the seas, why not just rent out the ships and goods - or even just lend the money? This approach was widely adopted by many Diarenans, who were able to profit of off trade from the safety of their own homes."
+
+ CLAN: "Clan"
+ HASMADA: "Hasmada"
+ NINKARO: "Ninkaro"
+ MADAHARO: "Madaharo"
+ AFARO: "Afaro"
+ KOBERRA: "Koberra"
