--- a/localisation/TD_estate_names_l_english.yml
+++ b/localisation/TD_estate_names_l_english.yml
@@ -11,6 +11,8 @@
  estate_wenyers: "Wenyers"
  estate_marchantes: "Marchantes"
  #Clergy
+ estate_pakapujari: "Pakapujari"
+ estate_zabayzgads: "Zabayzgads"
  estate_suitei: "Suitei"
  estate_matahri: "Matahari"
  estate_shanhohn: "Shanhohn"
